# shruti

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  VERSION  bump-version.sh  tarpaulin-report.json  tarpaulin.toml
.github/workflows/: ci.yml  release.yml
crates/shruti-ai/: Cargo.toml
crates/shruti-ai/src/: agent_api.rs  lib.rs  mcp.rs  serve.rs  voice.rs
crates/shruti-dsp/: Cargo.toml
crates/shruti-dsp/src/: buffer.rs  error.rs  format.rs  lib.rs  meter.rs
crates/shruti-dsp/src/analysis/: dynamics.rs  mod.rs  spectral.rs
crates/shruti-dsp/src/effects/: compressor.rs  delay.rs  eq.rs  limiter.rs  mod.rs  pan.rs  reverb.rs
crates/shruti-dsp/src/io/: mod.rs  reader.rs  writer.rs
crates/shruti-engine/: Cargo.toml
crates/shruti-engine/src/: error.rs  lib.rs  meter.rs  midi_io.rs  record.rs
crates/shruti-engine/src/backend/: cpal_backend.rs  mod.rs
crates/shruti-engine/src/graph/: mod.rs  node.rs  plan.rs
crates/shruti-instruments/: Cargo.toml
crates/shruti-instruments/src/: drum_kit.rs  drum_machine.rs  effect_chain.rs  envelope.rs  error.rs  filter.rs  instrument.rs  lfo.rs  lib.rs  mod_matrix.rs  oscillator.rs  preset.rs  routing.rs  sampler.rs  sf2.rs  sfz.rs  step_sequencer.rs  synth.rs  voice.rs
crates/shruti-instruments/tests/: midi_integration.rs
crates/shruti-plugin/: Cargo.toml
crates/shruti-plugin/src/: error.rs  format.rs  host.rs  instance.rs  lib.rs  node.rs  scanner.rs  state.rs
crates/shruti-session/: Cargo.toml
crates/shruti-session/src/: audio_pool.rs  automation.rs  edit.rs  error.rs  lib.rs  midi.rs  preferences.rs  region.rs  session.rs  store.rs  timeline.rs  track.rs  transport.rs  types.rs  undo.rs
crates/shruti-ui/: Cargo.toml
crates/shruti-ui/src/: app.rs  engine.rs  lib.rs  state.rs
crates/shruti-ui/src/input/: actions.rs  keymap.rs  mod.rs  shortcuts.rs
crates/shruti-ui/src/theme/: colors.rs  loader.rs  mod.rs  style.rs
crates/shruti-ui/src/views/: arrangement.rs  browser.rs  drum_grid.rs  instrument_panel.rs  mixer.rs  mod.rs  piano_roll.rs  sampler_editor.rs  settings.rs  synth_editor.rs  transport.rs
crates/shruti-ui/src/widgets/: automation_lane.rs  fader.rs  knob.rs  meter.rs  mod.rs  plugin_slot.rs  region_clip.rs  timeline_ruler.rs  track_header.rs  waveform.rs
docker/: Caddyfile.template  entrypoint.sh  supervisord.conf
docs/architecture/: audio-engine.md  overview.md
docs/decisions/: 001-double-buffered-rt-data.md  002-domain-newtypes.md  003-typed-instrument-params.md  004-per-crate-error-types.md  005-transport-atomics.md
docs/development/: contributing.md  roadmap.md
docs/guides/: getting-started.md
src/: lib.rs  main.rs
tests/: integration.rs
