[workspace]
resolver = "2"
members = [
    "crates/shruti-engine",
    "crates/shruti-dsp",
    "crates/shruti-plugin",
    "crates/shruti-ui",
    "crates/shruti-session",
    "crates/shruti-ai",
]

[workspace.dependencies]
cpal = "0.15"
rtrb = "0.3"
symphonia = { version = "0.5", features = ["wav", "flac", "pcm", "adpcm"] }
hound = "3.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }

[package]
name = "shruti"
version = "2026.3.11"
edition = "2024"
description = "A Rust-native Digital Audio Workstation"
license = "GPL-3.0"

[dependencies]
shruti-engine = { path = "crates/shruti-engine" }
shruti-dsp = { path = "crates/shruti-dsp" }
clap = { workspace = true }
rtrb = { workspace = true }

[[bin]]
name = "shruti"
path = "src/main.rs"

[[bin]]
name = "shruti-play"
path = "src/bin/play.rs"
