[workspace]
resolver = "2"
members = [
    "crates/shruti-engine",
    "crates/shruti-dsp",
    "crates/shruti-plugin",
    "crates/shruti-ui",
    "crates/shruti-session",
    "crates/shruti-ai",
    "crates/shruti-instruments",
]

[workspace.dependencies]
cpal = "0.15"
rtrb = "0.3"
symphonia = { version = "0.5", features = ["wav", "flac", "pcm", "adpcm", "aiff", "ogg", "vorbis"] }
hound = "3.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
libloading = "0.8"
midir = "0.10"
walkdir = "2"
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
rfd = "0.15"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[patch.crates-io]
winit = { path = "vendor/winit-0.30.13-patched" }

[package]
name = "shruti"
version = "2026.3.14"
edition = "2024"
description = "A Rust-native Digital Audio Workstation"
license = "GPL-3.0"

[dependencies]
shruti-engine = { path = "crates/shruti-engine" }
shruti-dsp = { path = "crates/shruti-dsp" }
shruti-session = { path = "crates/shruti-session" }
shruti-ui = { path = "crates/shruti-ui" }
shruti-ai = { path = "crates/shruti-ai" }
clap = { workspace = true }
rtrb = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
shruti-instruments = { path = "crates/shruti-instruments" }
serde_json = { workspace = true }
tempfile = "3"
uuid = { workspace = true }

[[bin]]
name = "shruti"
path = "src/main.rs"

[[bin]]
name = "shruti-play"
path = "src/bin/play.rs"


