[package]
name = "shruti-ai"
version = "2026.3.14-1"
edition = "2024"
description = "AI agent integration for Shruti (AGNOS)"
license = "GPL-3.0"

[dependencies]
shruti-session = { path = "../shruti-session" }
shruti-engine = { path = "../shruti-engine" }
shruti-dsp = { path = "../shruti-dsp" }
shruti-plugin = { path = "../shruti-plugin" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
