[package]
name = "shruti-session"
version = "2026.3.11"
edition = "2024"
description = "Project and session management for Shruti"
license = "GPL-3.0"

[dependencies]
shruti-engine = { path = "../shruti-engine" }
shruti-dsp = { path = "../shruti-dsp" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
