[package]
name = "shruti-ui"
version = "2026.3.11"
edition = "2024"
description = "GPU-accelerated UI for Shruti"
license = "GPL-3.0"

[dependencies]
shruti-engine = { path = "../shruti-engine" }
shruti-session = { path = "../shruti-session" }
shruti-dsp = { path = "../shruti-dsp" }
shruti-plugin = { path = "../shruti-plugin" }
egui = { workspace = true }
eframe = { workspace = true }
rfd = { workspace = true }
rtrb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
